# device_communication

./: .gitattributes  .gitignore  .gitmodules  Jenkinsfile  README.md  ai_bench.py  setup.py
android/: .gitignore  README.md
android/BugaRpcSoLoader/app/: CMakeLists.txt  build.gradle
android/BugaRpcSoLoader/app/src/androidTest/java/com/buga/rpcsoloader/: ExampleInstrumentedTest.java
android/BugaRpcSoLoader/app/src/main/: AndroidManifest.xml
android/BugaRpcSoLoader/app/src/main/cpp/: native-lib.cpp
android/BugaRpcSoLoader/app/src/main/java/com/buga/rpcsoloader/: RpcSoLoaderActivity.java
android/BugaRpcSoLoader/app/src/main/res/layout/: activity_rpc_so_loader.xml
android/BugaRpcSoLoader/app/src/main/res/values/: strings.xml
android/BugaRpcSoLoader/app/src/test/java/com/buga/rpcsoloader/: ExampleUnitTest.java
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: buga_grpc.cc
android/app/src/main/java/com/bugatone/grpc/cpp/: BugaGrpcActivity.java  HelloworldActivity.java
android/app/src/main/res/layout/: activity_buga_grpc.xml  activity_helloworld.xml
android/echo/: .gitignore  settings.gradle
android/echo/app/: build.gradle
android/echo/app/src/main/: AndroidManifest.xml
android/echo/app/src/main/java/com/buga/grpc/bugagrpcecho/: BugaGrpcActivity.java
android/echo/app/src/main/res/layout/: activity_buga_grpc.xml
android/echo/app/src/main/res/values/: strings.xml
android/echo/gradle/wrapper/: gradle-wrapper.properties
android/libbugarpc/: README.md  settings.gradle
android/libbugarpc/bugarpc/: CMakeLists.txt  build.gradle
android/libbugarpc/bugarpc/src/main/: AndroidManifest.xml
android/libbugarpc/bugarpc/src/main/cpp/: buga_grpc.cpp
android/libbugarpc/bugarpc/src/main/java/com/buga/grpc/cpp/: BugaGrpc.java  BugaRpcExecutor.java  MarshaledObject.java
android/libbugarpc/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  demo_main.cpp  main.cpp  make.py
cpp/dependencies/grpc/: README.md
cpp/dependencies/grpc/gist/: android_ares_config.patch  build-ndk.sh  makefile.patch
cpp/rpc_bindings/: bugarpc.h  marshallers.cpp  marshallers.h  remote_procedure_execution.cpp  remote_procedure_execution.h  rpc_log.h
cpp/rpc_bugatone_proxy/: rpc_bugatone_main.cpp  rpc_bugatone_proxy.cpp
cpp/rpc_impl/: buga_echo_executor.cpp  buga_echo_executor.h  buga_grpc_server.cpp  buga_grpc_server.h  buga_rpc_executor.cpp  buga_rpc_executor.h
cpp/rpc_proto/: CMakeLists.txt  buga_rpc.proto  rpc.proto
cpp/rpc_so_loader/: rpc_so_loader.cpp  rpc_so_loader.h  rpc_so_loader_main.cpp  test_lib.cpp
cpp/rpc_test/: benchmark_executor.cpp  benchmark_executor.h
mt_suggest/: MessageTransport.java  additional_stuff.txt  device_procedure_call.h  device_procedure_call.py  message_transfer.py  message_transport.py  remote_procedure_call.py  remote_procedure_execution.h  requirements.txt  thing.java
old/: DeviceCommunicatorInterface.java  app_controller_samples.py
pydcomm/: __init__.py  adb_connection.py  connection.py  connection_decorators.py  demo_app_controller.py  device_utils.py  device_utils_benchmarks.py  device_utils_unit_tests.py  file_bridge.py  infra.py  remote_procedure_call.py  unit_tests.py
pydcomm/benchmarks/: _rpc_benchmarks.py  adb_connection_benchmarks.py  android_device_utils_benchmarks.py  benchmark_utils.py  connection_benchmarks.py  device_utils_benchmarks.py  raw_input_recorder.py  rpc_benchmarks.py  rpc_ux_benchamrks.py  send_message_benchmarks.py
pydcomm/benchmarks/connection/: adb_connection_benchmarks.py  data.py
pydcomm/connections/: dummy.py
pydcomm/examples/: rpc_loopback_ai_example.cpp  rpc_loopback_ai_example.py
pydcomm/general_android/: adb_connection.py  adb_connection_decorators.py  android_device_utils.py  android_file_bridge.py
pydcomm/general_android/connection/: __init__.py  adb_connection.py  adb_monitor_wrapping_echo_hi.py  common.py  connection.py  connection_factory.py  connection_fixers.py  decorator_helpers.py  device_selector.py  device_serial_to_name_mapping.ini  iadb_monitor.py  internal_adb_connection.py  internal_adb_connection_factory.py  internal_connection_factory.py  wired_adb_connection.py  wireless_adb_connection.py
pydcomm/general_android/connection/fixers/: adb_connect_fixer.py  call_a_developer_fixer.py  connected_usb_device_fixes.py  enable_usb_debugging_fixer.py  get_user_attention_fixer.py  unreachable_device_fixer.py  verify_same_network_fixer.py
pydcomm/general_android/connection/fixes/: computer_network_disconnected_fixes.py  connected_usb_device_fixes.py
pydcomm/impl/: adb_connection_adapter.py  adb_connection_factory.py
pydcomm/oppo_845/: oppo_device_utils.py
pydcomm/public/: bugarpc.py  connfactories.py  iconnection.py  rpcfactories.py  ux_stats.py
pydcomm/public/deviceutils/: device_utils.py  media_player_utils.py
pydcomm/public/ux_benchmarks/: common_extra_stats.py  conn_ux_benchmarks.py  connection_benchmarks.py  rpc_ux_benchamrks.py  rpc_ux_benchmarks.py  utils.py  ux_stats_summary.py
pydcomm/public/ux_benchmarks/connection/: actions.py  scenarios.py
pydcomm/rpc/: _buga_grpc_caller.py  buga_grpc_caller.py  buga_grpc_client.py  buga_grpc_server.py  buga_rpyc.py  bugarpc.py  common.py  marshallers.py  remote_procedure_call.py
pydcomm/tests/: __init__.py  adb_connection_tests.py  connection_tests.py  device_utils_unit_tests.py  helpers.py  old_adb_connection_tests.py  remote_procedure_call_tests.py
pydcomm/tests/benchmarks/: raw_input_recorder_tests.py
pydcomm/tests/connection/: adb_connection_tests.py  connection_fixers_tests.py  consts.py  device_selector_tests.py  network_disconnected_fixer_tests.py  wired_adb_connection_tests.py  wired_connection_tests.py
pydcomm/tests/connection/fixers/: connected_usb_device_fixes_tests.py  network_disconnected_fixer_tests.py  unreachable_device_fixer_tests.py
pydcomm/tests/connection/fixes/: connected_usb_device_fixes_tests.py  network_disconnected_fixer_tests.py
pydcomm/utils/: userexpstats.py
rpc_bindings/: remote_procedure_execution.h
(+2 files in other folders)
